--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react-router": "^7.1.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.50.1",
     "@react-router/dev": "^7.1.5",
     "@tailwindcss/vite": "^4.0.0",
     "@types/node": "^20",
