Change settinge and file structure from template

--- a/back/package.json
+++ b/back/package.json
@@ -59,7 +59,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "test/unit",
+    "rootDir": "test/unit/",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
